[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HeadsUpDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/game-over.wav" type="AudioStream" id=5]
[ext_resource path="res://art/house-in-a-forest-loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
enemyScene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 0, 0.00122178 )
rotation = -0.000312867
offset = 2398.56

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.951

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 320 )

[node name="HeadsUpDisplay" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="startPosition" type="Position2D" parent="."]
position = Vector2( 240, 560 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="gameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="startGame" from="HeadsUpDisplay" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
